Fixed height overflow of overlay

--- a/styles/home.css
+++ b/styles/home.css
@@ -311,7 +311,7 @@ body {
     position: relative;
     background-color: rgba(0,0,0,0.6);
     width: 100%;
-    height: 100vh;
+    height: auto;
     padding-top: 30px;
 }
 
